fixing the navbar resizing issue on smaller scrreen sizes, partially fixed

--- a/assets/css/customize.css
+++ b/assets/css/customize.css
@@ -25,10 +25,6 @@ body { padding-top: 70px; }
 
   width: 100%; 
 }
-#search-box:focus {
-  width: 400px;
-  border-color: blue;
-}
 .social-sharing {
   line-height: 100%;
 }
