--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -474,17 +474,27 @@ span + .entry-title {
 }
 // hiding job post animation for small and medium devices
 
-@media screen and (max-device-width: 980px) {
+@media screen and (max-device-width: 979px) {
 	.forkit{
 	display: none; 
 	}
 	.search-box-margin {
 	  margin: 6px 0px 6px 5px;
 	}	
+	#search-box-focus {
+		width: 60%;
+		border-color: rgb(204, 204, 204);
+	}
 }
 @media screen and (min-device-width: 980px){
 	.search-box-margin {
 	  margin: 6px 0px 6px 150px;
 	}	
+	#search-box:focus {
+	  width: 400px;
+	  border-color: rgb(204, 204, 204);
+	}
+
 }
+
 
